--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
     </div>
     <br>
    <div class="container3">
-    <img  width=1500px height= 1000px src="C:\Users\Priyanka\OneDrive\Desktop\Pranav desktop\NOTES\PROJECTS\Internship 2024\Best.jpeg" alt="Jai Hind DET">
+    <img  width=1500px height= 1000px src="C:\Users\Priyanka\OneDrive\Desktop\Projects\Best.jpeg" alt="Jai Hind DET">
     <br>
     <hr>
 
     <div class="image-container">
         <div class="image-item">
-    <img id="DA" width=250px  height=350px src="C:\Users\Priyanka\OneDrive\Desktop\Pranav desktop\NOTES\PROJECTS\Internship 2024\CC.jpeg" alt="CC">
+    <img id="DA" width=250px  height=350px src="C:\Users\Priyanka\OneDrive\Desktop\Projects\CC.jpeg" alt="CC">
     <br> 
     <h3> Cadet Captain Dnyanesh Avhad <br>  <a id="sub"> RDC 2024  Best Cadet  </a> </h3>
         </div>
 
         <div class="image-container">
         <div class="image-item">
-    <img id="AK" width=250px  height=350px  src="C:\Users\Priyanka\OneDrive\Desktop\Pranav desktop\NOTES\PROJECTS\Internship 2024\AK.jpeg" alt="AK" > <br>
+    <img id="AK" width=250px  height=350px  src="C:\Users\Priyanka\OneDrive\Desktop\Projects\AK.jpeg" alt="AK" > <br>
     <h3 id="ak">  Cadet Akshay Malusare </h3>
     </div>
         </div>
 
         <div class="image-container">
             <div class="image-item">
-        <img id="SS" width=250px  height=350px  src="C:\Users\Priyanka\OneDrive\Desktop\Pranav desktop\NOTES\PROJECTS\Internship 2024\SS.jpeg" alt="AK" > <br>
+        <img id="SS" width=250px  height=350px  src="C:\Users\Priyanka\OneDrive\Desktop\Projects\SS.jpeg" alt="SS" > <br>
         <h3 id="ss">  Cadet Shivam Shedge <br> <a> SSB Recommanded </a></h3>
         </div>
             </div>
@@ -55,7 +55,7 @@
    
    
             <div class="container3">
-     <img  id="CATC" width=1500px height= 950px src="C:\Users\Priyanka\OneDrive\Desktop\Pranav desktop\NOTES\PROJECTS\Internship 2024\CATC.jpeg" alt="CATC24"> <br>
+     <img  id="CATC" width=1500px height= 950px src="C:\Users\Priyanka\OneDrive\Desktop\Projects\CATC.jpeg"alt="CATC24"> <br>
         <h1 id="C"> CATC 2024 Winner </h1>
        </div>
        
@@ -132,7 +132,7 @@ This unit is a gateway for young students to explore a disciplined lifestyle, ga
        <div class="container5">
        <h2 id="IN">  INDIAN NAVY</h2>
        <video  id="vid" width="1500" height="1000" autoplay muted loop >
-        <source src="C:\Users\Priyanka\OneDrive\Desktop\Pranav desktop\NOTES\PROJECTS\Internship 2024\IND.mp4" type="video/mp4">
+        <source src="C:\Users\Priyanka\OneDrive\Desktop\Projects\IND.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
        </div>
