--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="image-item">
     <img id="DA" width=250px  height=350px src="C:\Users\Priyanka\OneDrive\Desktop\Projects\CC.jpeg" alt="CC">
     <br> 
-    <h3> Cadet Captain Dnyanesh Avhad <br>  <a id="sub"> RDC 2024  Best Cadet  </a> </h3>
+    <h3>  Senior Cadet Captain Dnyanesh Avhad <br>  <a id="sub"> RDC 2024  Best Cadet  </a> </h3>
         </div>
 
         <div class="image-container">
