--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio </title>
     <link rel="stylesheet" href="style.css">
-    <title>My Portfolio</title>
 </head>
+
 <body>
-   
+    <h1> Portfolio</h1> <hr>
+    <header>
+        <nav>
+            <a href="#"> About</a>
+            <a href="#"> Education</a>
+            <a href="#"> Skills</a>
+            <a href="#"> Projects</a>
+        </nav>
+    </header>
+    <img src="C:\Users\Priyanka\OneDrive\Desktop\Portfolio\VK.jpg" alt="A sample image" width="600" height="400">
+
+
+     
+
+
+    
 </body>
 </html>
