--- a/index.html
+++ b/index.html
@@ -49,5 +49,9 @@
             <img id="Unit" src="Unit.jpeg" alt="My unit">
         </div>
     </section>
+    <footer>
+        <h4> © Pranav Parab <br>
+        2024</h4>
+    </footer>
 </body>
 </html>
