--- a/Contact/index.html
+++ b/Contact/index.html
@@ -13,6 +13,7 @@
 <h1> "Get in touch with us, <br>
    and let's stay connected!"</h1>
 
+   <div class="form-container">
    <div class="Form"> 
     <form>
         <input id="name"  type="text" name="name" placeholder="Your Name"> <br>
@@ -22,7 +23,9 @@
     </form>
    <button id="button"type="submit"> Submit!</button>
    </div>
-
   <img id="last" src="https://images.emojiterra.com/google/android-12l/512px/1fae1.png" alt="emoji">
+   </div>
+
+   <h5> Thank you!</h5>
 </body>
 </html>
