--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
                 <a href="#work">Work</a>
             </div>
             <div class="element2">
-                <a href="#about">About/Contact</a>
+                <a href="contact/index.html">Contact</a>
             </div>
             <div class="title">
                 <h1>Pranav Parab</h1>
             </div>
             <div class="element3">
-                <a href="https://www.instagram.com/pranavparab_22" target="_blank">
+                <a href="https://www.instagram.com/pranavparab_22?igsh=MTljaGdiMXFpdXA1Yw==" target="_blank">
                     <img id="Insta" src="insta.png" alt="Instagram">
                 </a>
                 <a href="https://www.linkedin.com/in/pranav-parab-bba63631a" target="_blank">
