--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="#work">Work</a>
             </div>
             <div class="element2">
-                <a href="contact/index.html">Contact</a>
+                <a href="Contact-index.html">Contact</a>
             </div>
             <div class="title">
                 <h1>Pranav Parab</h1>
