--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
     </header>
 
     <section class="intro">
+        <div class="maintenance-container">
+            <div class="maintenance-banner">
+                <img src="https://img.icons8.com/ios-filled/100/000000/maintenance.png" alt="Under Maintenance Icon" class="maintenance-icon">
+                <h1>We’ll Be Back Soon!</h1>
+                <p>Our website is currently undergoing scheduled maintenance.</p>
+                <p>Thank you for your patience!</p>
+                <div class="progress-bar">
+                    <div class="progress"></div>
+                </div>
+            </div>
+        </div>
         <h2>Jai Hind!</h2>
     </section>
 
