--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="maintenance-banner">
                 <img src="https://img.icons8.com/ios-filled/100/000000/maintenance.png" alt="Under Maintenance Icon" class="maintenance-icon">
                 <h1>We’ll Be Back Soon!</h1>
-                <p>Our website is currently undergoing scheduled maintenance.</p>
+                <p>Our website is currently undergoing  maintenance.</p>
                 <p>Thank you for your patience!</p>
                 <div class="progress-bar">
                     <div class="progress"></div>
