--- a/index.html
+++ b/index.html
@@ -33,25 +33,19 @@
         </nav>
     </header>
 
-    <section class="intro">
-        <div class="maintenance-container">
-            <div class="maintenance-banner">
-                <img src="https://img.icons8.com/ios-filled/100/000000/maintenance.png" alt="Under Maintenance Icon" class="maintenance-icon">
-                <h1>We’ll Be Back Soon!</h1>
-                <p>Our website is currently undergoing  maintenance.</p>
-                <p>Thank you for your patience!</p>
-                <div class="progress-bar">
-                    <div class="progress"></div>
-                </div>
-            </div>
-        </div>
-        <h2>Jai Hind!</h2>
-    </section>
-
     <section id="main-content">
+      <div class="container4">
+         
+        <img id="flag" src="Flag_of_India.svg" alt="Indian Flag">
+
+        <h2> Jai Hind!</h2>
+
+      </div>
+      <hr>
+
         <div class="container">
             <div class="text">
-                <p>Myself Cdt. Pranav Parab. I’m pursuing my Engineering studies at Lokmanya Tilak College of Engineering and proudly serving as an NCC Cadet in the 1 Maharashtra Naval Unit.</p>
+                <p>Myself Cdt.Pranav Parab. I’m pursuing my Engineering studies at Lokmanya Tilak College of Engineering and proudly serving as an NCC Cadet in the 1 Maharashtra Naval Unit.</p>
             </div>
             <img id="Me" src="Me.jpeg" alt="My photo">
         </div>
